<resources>
    <string name="app_name">Moov</string>
    <string name="title_activity_login">SIGN IN</string>
    <string name="register">REGISTER</string>

    <string name="placeholder">Just some sad placeholder text. Sorry!</string>
    <string name="reauthenticate_password_change">To change your password, \n input the fields below </string>

    <string name="show_more" formatted="false">%1$s\u2026 <font color ="#0000FF"><u><b>Show more.</b></u></font></string>
    <string name="not_show_more">%1$s</string>

    <!-- Strings related to login -->
    <string name="reauthenticate">Please input your login details.</string>
    <string name="reauthenticate_email_change">Please input your login details \nand your new email.</string>
    <string name="prompt_email">Email</string>
    <string name="year">Year</string>
    <string name="runtime">Runtime</string>
    <string name="movie_summary">Movie Summary</string>
    <string name="new_username">Please input your new username</string>

    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="input_movie_name">Input Movie Name</string>

    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="change_username">Change Username</string>
    <string name="logout">Log Out</string>

    <string name="hint_new_username">Type new username</string>
    <string name="following">Follow</string>

    <string name="choose_movie">Choose Movie</string>

    <string name="delete_post">Delete Post</string>
    <string name="edit_post">Edit Post</string>

    <string name="current_avatar">Current Avatar</string>
    <string name="new_avatar">New Avatar</string>
    <string name="select_new_avatar">Select new avatar</string>
    <string name="confirm_new">Confirm new avatar</string>

    <string name="review">Review</string>

    <string name="input_friend_username">Input your friend\'s username</string>

    <string name="hint_username">Username</string>
    <string name="hint_pass">Password</string>
    <string name="hint_pass2">Repeat Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Fullname</string>

    <string name="follow_btn">Follow</string>

    <string name="numAttempts"> attempts remaining</string>

    <string name="btn_link_to_register">NOT A MEMBER?</string>
    <string name="btn_register">SIGN UP</string>
    <string name="btn_already_registered">Already registered?</string>
    <string name="btn_reset">Reset Password</string>
    <string name="btn_go">SEARCH</string>


    <string name="search_for_movie">Search for a movie</string>
    <string name="search_movie_to_review">Find a movie to review</string>

    <string name="change_avatar">Change Avatar</string>
    <string name="account">ACCOUNT</string>
    <string name="delete_account">Delete account</string>
    <string name="support">SUPPORT</string>
    <string name="report_problem">Report a Problem</string>

    <string name="profile">PROFILE</string>

    <string name="email">Email</string>
    <string name="password_requirement">Minimum 6 characters</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="current_pass">Current Password</string>
    <string name="hint_current_email">Current Email</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_again">New Password (again)</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_new_email_again">New Email (again)</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">SEND</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your email. We will send a link to your email for you to reset your password.</string>

    <string name="mLogo">Moov Logo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_feed_page">FeedPage</string>
    <string name="new_post">Create a new post</string>
    <string name="movie">Movie Title</string>
    <string name="rating">Rating out of Ten</string>
    <string name="posttext">Write your thoughts! (optional)</string>
    <string name="share">SHARE</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_other_user_profile">OtherUserProfile</string>
    <string name="title_activity_find_user">FindUserActivity</string>
    <string name="title_activity_feed">FeedActivity</string>

    <string name="title_movie_profile">MovieProfile</string>
    <string name="movie_rating">MovieAPIRating</string>
    <string name="movie_follower_rating">FollowerRating</string>
    <string name="movie_btn_summary">Summary</string>
    <string name="movie_btn_reviews">Reviews</string>

    <string name="search">Search</string>
    <string name="title_activity_movie_search_results">MovieSearchResultsActivity</string>
    <string name="title_activity_choose_movie">ChooseMovieActivity</string>
    <string name="title_activity_edit_post">EditPostActivity</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_change_avatar">ChangeAvatarActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_change_email">ChangeEmailActivity</string>
    <string name="title_activity_report_issue">ReportIssueActivity</string>

    <string name="have_issue">Have an issue? Let us know!</string>
    <string name="subject">Subject</string>
    <string name="issue_description">Describe your problem</string>
    <string name="title_activity_tool_bar">ToolBarActivity</string>
    <string name="title_activity_toolbar_base">ToolbarBaseActivity</string>
    <string name="title_activity_followers_following">FollowersFollowingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_full_post">FullPostActivity</string>


</resources>
