<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.moov.moov.activity.UserSettingsActivity"
    tools:showIn="@layout/activity_user_settings"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/constraintLayout"
    >

    <ScrollView
        android:id="@+id/svSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/llSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/profile"
                android:textColor="@color/darker_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnChangeAvatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_otherstartbutton"
                android:textColor="@color/white"
                android:gravity="start|center_vertical"
                android:text="@string/change_avatar"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/account"
                android:textColor="@color/darker_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnGoChangEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_otherstartbutton"
                android:textColor="@color/white"
                android:gravity="start|center_vertical"
                android:text="@string/change_email"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_otherstartbutton"
                android:textColor="@color/white"
                android:gravity="start|center_vertical"
                android:text="@string/change_password"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="start|center_vertical"

                android:text="@string/support"

                android:textColor="@color/darker_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnReportProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:background="@drawable/rounded_otherstartbutton"
                android:gravity="start|center_vertical"
                android:textColor="@color/white"
                android:text="@string/report_problem"

                android:textAlignment="center" />

            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_login"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textAlignment="center" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
