<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#00000000"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/tvMovieSummary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvReleaseYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvReleaseYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="20dp"
            android:text="@string/year"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvRuntime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="20dp"
            android:text="@string/runtime"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvMovieSummary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseYear"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvMovieSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_summary"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMoviePoster" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>